--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
     text-align: center;
 }
+
+.calculator {
+    border:2px;
+    border-style:solid;
+    display:inline-block;
+    padding-left:10px;
+    padding-right:10px;
+}
+
+.calculator .calcForm {
+    display: inline-block;
+}
