--- a/style.css
+++ b/style.css
@@ -2,14 +2,34 @@ body {
     text-align: center;
 }
 
+h1 {
+    background-color: white;
+    padding: 10px;
+}
+
+p {
+    background-color: white;
+}
+
 .calculator {
-    border:2px;
-    border-style:solid;
-    display:inline-block;
-    padding-left:10px;
-    padding-right:10px;
+    border: 2px;
+    border-style: solid;
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: darkgray;
 }
 
 .calculator .calcForm {
     display: inline-block;
+    background-color: lightgrey;
+}
+
+.operace {
+    height: 50px;
+    width: 170px;
+}
+
+.numberinput {
+    width: 170px;
 }
